2011-02-23  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh,
	debian/pcmanx-gtk2.install: Polish test script for deb and remove
	unneeded file.
	* data/Makefile.am,
	data/pcmanx.1: Add man page for pcmanx.

2011-02-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	build/make-new-release.sh,
	configure.ac,
	debian/control,
	debian/libpcmanx-core0.install,
	debian/mozilla-plugin-pcmanx.install,
	debian/mozilla-plugin-pcmanx.links,
	debian/rules,
	plugin/Makefile.am,
	plugin/data/Makefile.am,
	plugin/data/TelnetProtocol.js.in,
	plugin/data/pcmanx.html,
	plugin/data/pcmanx.png,
	plugin/src/Makefile.am,
	plugin/src/np_entry.cpp,
	plugin/src/npn_gate.cpp,
	plugin/src/npp_gate.cpp,
	plugin/src/npplat.h,
	plugin/src/npupp.h,
	plugin/src/nsScriptablePeer.cpp,
	plugin/src/nsScriptablePeer.h,
	plugin/src/pcmanx_interface.idl,
	plugin/src/plugin.cpp,
	plugin/src/plugin.h,
	plugin/src/pluginbase.h,
	src/core/Makefile.am: Remove deprecated firefox plugin, and not install
	libpcmanx.

2011-01-19  Kan-Ru Chen  <kanru@kanru.info>

	* src/view/telnetcon.cpp (CTelnetCon): m_Port is a string now.
	(Connect): ditto. Always uses getaddrinfo to resolve addresses.
	(PreConnect): ditto.
	(DoDNSLookup): Simplify DNS lookup.

	* src/view/telnetcon.h (CTermData): m_Port is a string now.
	(CDNSRequest): ditto.

	* src/view/telnetcon.cpp (DoDNSLookup): Only lookup IPv4 addresses
	when using proxy.
	(ConnectAsync): Use getaddrinfo to lookup IP addresses.

	* src/core/proxy.c, src/core/proxy.h: serv_addr is now a
	sockaddr_storage wrapped sockaddr_in.

	* src/appconfig.cpp, src/core/site.cpp, src/core/site.h: Change
	ProxyPort to string type.

2011-01-10  Kan-Ru Chen  <kanru@kanru.info>

	* src/view/telnetcon.cpp, src/view/telnetcon.h: Add IPv6
	support. Use getaddrinfo to resolve both AF_INET and AF_INET6
	addresses. Also support IPv6 address literal specified in RFC 3986
	section 3.2.2.
	* configure.ac: Add new checks.