@@ -5,6 +5,8 @@ Maintainer: PCManX Development Group <pcmanx@googlegroups.com>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, intltool, libgtk2.0-dev, libnotify-dev, xulrunner-1.9.2-dev, libx11-dev
 Standards-Version: 3.9.1
 Homepage: http://code.google.com/p/pcmanx-gtk2/
+Vcs-Browser: http://code.google.com/p/pcmanx-gtk2/source/browse/
+Vcs-Svn: http://pcmanx-gtk2.googlecode.com/svn/
 
 Package: pcmanx-gtk2
 Architecture: any
